Bugfixes on mobile navigation button also some blending effects

--- a/css/style.scss
+++ b/css/style.scss
@@ -263,6 +263,7 @@ body {
 .wave-container {
 	height: 150px;
 	overflow: hidden;
+
 	@include respond-to(small-mobile) {
 		height: 75px;
 	}
@@ -313,7 +314,7 @@ header {
 				color: $inherit;
 				padding: 10px 6px;
 				font-size: 14px;
-				margin: 0 .6em;
+				margin: 0.6em;
 				letter-spacing: 1.95px;
 				font-weight: 700;
 				text-transform: uppercase;
@@ -333,7 +334,7 @@ header {
 .openNav {
 	position: absolute;
 	display: none;
-	z-index: 10;
+	z-index: 30;
 	right: 15px;
 	top: 15px;
 	background-color: transparent;
@@ -345,7 +346,7 @@ header {
 	transition: 0.2s ease;
 	font-size: 22px;
 	padding: 0;
-	/*mix-blend-mode: difference;*/
+	mix-blend-mode: difference;
 
 	&:hover {
 		background: rgba(0, 0, 0, 0.25);
@@ -364,7 +365,7 @@ header {
 	position: fixed;
 	z-index: 9;
 	left: -100vw;
-	height: calc(100vh - 60px);
+	height: 100vh;
 	background: #222;
 	box-sizing: border-box;
 	width: 100vw;
@@ -536,6 +537,7 @@ a {
 		@include respond-to(laptop) {
 			padding: 96px 48px 48px 48px;
 		}
+
 		@include respond-to(small-mobile) {
 			padding: 96px 28px 48px 28px;
 		}
